--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html{
 }
   
 body {
-    font-size: 1.6rem;
+    font-size: 3.6rem;
     background-color: rgb(181, 211, 212);
 }
 
@@ -21,7 +21,7 @@ text {
     font-family: 'Inconsolata', monospace;
     font-family: 'Libre Baskerville', serif;
 }
-/* 
+
 .header {
     width: 100%;
     height: 8rem;
@@ -36,50 +36,66 @@ text {
     color: rgb(202, 202, 211);
     font-size: 4rem;
     font-family:'Libre Baskerville', serif;
-
 }
 
 .content {
     flex-direction: column;
     text-align: center;
+    margin-left: 10%;
 }
 
-.content .infos h2 {
-    width: 100%;
-    margin-top: 2rem;
-    font-size: 2rem;
-    font-family: 'Libre Baskerville', serif;
-} */
-
-/* .content .livros{
-    margin-top: 2rem;
-}
-
-.content .livros h3{
+.content h3{
     font-size: 1.5rem;
     font-family: 'Libre Baskerville', serif;
     margin-bottom: 3rem;
-} */
-
-/* .content .livros .listaLivros {
-    margin-left: 0.5rem;
+    margin-top: 2rem;
 }
 
-.content .livros .listaLivros table{
+.content h2 {
+    width: 100%;
+    margin-bottom: 3rem;
     margin-top: 2rem;
-    border: solid 1px ;
+    font-size: 2rem;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Libre Baskerville', serif;
+}
+
+
+.tabhead {
+    font-family:'Libre Baskerville', serif;
+    color: #000000;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.tabv {
+    font-family:'Libre Baskerville', serif;
+	color: #000000;
+	background-color: #ffadad;
+	font-weight: plain;
+    font-size: 1.2rem;
+    text-decoration-line: underline;
+}
+
+button {
+    width: 26px;
+    height: 4;
+    color: red;
+    font-weight: bold;
+
+}
+
+.content .livros{
+    margin-top: 2rem;
+}
+
+.content .livros .listaLivros .tabheader td{
+    margin-top: 2rem;
     text-align: center;
-} */
+} 
 
-/* .content .livros .listaLivros table tr{
-    background-color: ;
-} */
 
-/* .content .livros .listaLivros table tr .tablivros{
-    width: 36rem;
-    height: 0.3rem; 
-} */
-/* 
 .content .livros .cad-livros{
     flex-direction: column;
     justify-items: center;
@@ -91,6 +107,7 @@ text {
     justify-content: center;
     border: solid 1px blue;
     margin-left: 25%;
+    margin-bottom: 5rem;
 }
 
 .content .livros .cad-livros input{
@@ -109,34 +126,7 @@ text {
     margin-bottom: 3rem;
     font-size: 1.5rem;
     font-family:bold 'Libre Baskerville', serif;
-} */
-
-/* 
-.content .clientes h3{
-    font-size: 1.5rem;
-    font-family: 'Libre Baskerville', serif;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
-}
-
-.content .clientes .listaClientes {
-    margin-left: 0.5rem;
-}
-
-
-.content .clientes .listaClientes table{
-    margin-top: 2rem;
-    border: solid 1px ;
-    text-align: center;
-}
-
-.content .clientes .listaClientes table tr{
-    background-color: rgb(235, 168, 168);
-}
-
-.content .clientes .listaClientes table tr .tabclientes{
-    width: 36rem;
-    height: 0.3rem; 
+    color: rgb(4, 4, 37);
 }
 
 .content .clientes .cad-cliente{
@@ -159,45 +149,22 @@ text {
     margin-top: 3rem;
 }
 
+
 .content .clientes .cad-cliente button{
     width: 80%;
     height: 3.5rem;
     border-radius: 0.4rem;
     background-color: rgb(86, 87, 88);
+    color: rgb(250, 250, 250);
     margin-top: 2rem;
     margin-bottom: 3rem;
     font-size: 1.5rem;
     font-family:bold 'Libre Baskerville', serif;
-} */
-
-/* #################### */
-
-/*
-.content .locacao h3{
-    font-size: 1.5rem;
-    font-family: 'Libre Baskerville', serif;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
 }
 
-.content .locacao .listaLocacoes {
-    margin-left: 0.5rem;
-}
-
-
-.content .locacao .listaLocacoes table{
+.content .clientes .cad-cliente td{
     margin-top: 2rem;
-    border: solid 1px ;
     text-align: center;
-}
-
-.content .locacao .listaLocacoes table tr{
-    background-color: rgb(134, 241, 124);
-}
-
-.content .locacao .listaLocacoes table tr .tablocacoes{
-    width: 36rem;
-    height: 0.3rem; 
 }
 
 .content .locacao .cad-locacao{
@@ -235,5 +202,10 @@ text {
     margin-top: 2rem;
     margin-bottom: 3rem;
     font-size: 1.5rem;
+    color: rgb(231, 231, 236);
     font-family:bold 'Libre Baskerville', serif;
-} */
+}
+.content .locacao .cad-locacao td{
+    margin-top: 2rem;
+    text-align: center;
+}
